--- a/index.html
+++ b/index.html
@@ -1,12 +1,3 @@
-<!--
-
------BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
-
-- -->
-
-
-
 <!--HTML-->
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -51,6 +42,7 @@ Hash: SHA256
             <tr><td></td><td>&nbsp;&nbsp;<a href="https://gtmadureira.keybase.pub/">gtmadureira.keybase.pub</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Keybase • </td><td><a href="https://keybase.io/gtmadureira">keybase.io/gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>PGP Public Key • </td><td>61A6 5C8D 7844 A068&nbsp;&nbsp;<a href="https://keybase.io/gtmadureira/pgp_keys.asc">[ view ]</a>&nbsp;&nbsp;<a href="./public_keys/[_Luis Gustavo Souza Madureira_][_gtmadureira@gmail.com_][_0x61A65C8D7844A068_].asc">[ get ]</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
+            <tr><td>PGP Public Key - Top Secret Level • </td><td>F2A1 92C3 7E75 D7D4&nbsp;&nbsp;<a href="http://keys.gnupg.net/pks/lookup?op=get&search=0xF2A192C37E75D7D4">[ view ]</a>&nbsp;&nbsp;<a href="./public_keys/[_Luis Gustavo Souza Madureira_][_gtmadureira.safe@gmail.com_][_0xF2A192C37E75D7D4_].asc">[ get ]</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>GitHub • </td><td><a href="https://github.com/gtmadureira">github.com/gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Facebook • </td><td><a href="https://facebook.com/gtmadur3ira">gtmadur3ira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Instagram • </td><td><a href="https://www.instagram.com/gtmadureira/">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
@@ -80,25 +72,3 @@ Hash: SHA256
  </script>
 
 </html>
-
-
-
-<!--
------BEGIN PGP SIGNATURE-----
-
-iQIzBAEBCAAdFiEEE8iavjRZ2/dKhzGiBXQppWFastkFAl6KikAACgkQBXQppWFa
-stlPKg//RY928Y506fLOzFzyTOsVp3PaJuilt0EbDHZfF1aS4Q2OXxb1TVSjwdxS
-CFSpzJzypWQwEl9LmdVUPd/N9ijnVGlpFNBA2bd4KxGOLxYV64gQFzkYFHUGBITJ
-Wd6APFineN22PHF6AQFErD0lMzvVnLGPQVdtWtVlKORVbPvGfmioaR/ViRbKDAPA
-GZmy2q0vaezzJPvmAgbly8odTSKKhTFZuvlSFEvmi18OXu6yKxUUD3mpSYEXxBoy
-O+XojXlCU+PQpSfg66MW8PkewHsbv7LICxdyhYorbHrZ/a0A/HzwhW/2TG9O+ujb
-BQAhZPda1TOGPsgYdmwyXoSRMlkp1dFIaaOzWKZh+ht8TQ6sW6b97bNGdxI+Rtsf
-FpAMX0/LqCVsCjaZ6usooI/HbL4antdgK5kfycFMD/cCFvYkELm5xyYohwi7QoiE
-mANf4rdJ9d9Rzk6bTfrmHSeEimQzWtz5LPq862hA8b395EiEYxoJo8VbjOqr7SHn
-j6xnfHlofQhCBz45D4RU4U7QTgLtT6d5hnpHYuEqAj05lwvpjGW1BPdFj1YbLiYW
-rRttzA/7fKxeFuAjmbXgYo/qOjFcmWcuH0uAovhrwXqd3Cc1nEbaK7Y2XHgrffp/
-W7b3pW6X35yEZ3sxTTmUrxTzc9pLDkpon26+YuKPpwgXsIcYPuc=
-=lR5t
------END PGP SIGNATURE-----
-
--->
