--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
             <tr><td>Website • </td><td><a href="https://gtmadureira.github.io/">gtmadureira.github.io</a> (you are here!)&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td></td><td>&nbsp;&nbsp;<a href="https://gtmadureira.keybase.pub/">gtmadureira.keybase.pub</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
+            <tr><td></td><td>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://gtmadureira.omg.lol/">gtmadureira.omg.lol</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Keybase • </td><td><a href="https://keybase.io/gtmadureira">keybase.io/gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>PGP Public Key • </td><td>61A6 5C8D 7844 A068&nbsp;&nbsp;<a href="https://keybase.io/gtmadureira/pgp_keys.asc">[ view ]</a>&nbsp;&nbsp;<a href="./public_keys/[_Luis Gustavo Souza Madureira_][_gtmadureira@gmail.com_][_0x61A65C8D7844A068_].asc">[ get ]</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>PGP Public Key - Top Secret Level • </td><td>F2A1 92C3 7E75 D7D4&nbsp;&nbsp;<a href="http://keys.gnupg.net/pks/lookup?op=get&search=0xF2A192C37E75D7D4">[ view ]</a>&nbsp;&nbsp;<a href="./public_keys/[_Luis Gustavo Souza Madureira_][_gtmadureira.safe@gmail.com_][_0xF2A192C37E75D7D4_].asc">[ get ]</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
