--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <tr><td>Hacker News • </td><td><a href="https://news.ycombinator.com/user?id=gtmadureira">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Ask Me Anything • </td><td><a href="https://keybase.io/gtmadureira/chat">gtmadureira</a> (via Keybase)&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Bitcoin Address Generator • </td><td><a href="https://gtmadureira.github.io/bitcoin_address-generator/app_web/">gtmadureira.github.io/bitcoin_address-generator/app_web</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
+            <tr><td>Build a secure GPG Key • </td><td><a href="https://gtmadureira.github.io/build-secure-gpg-key/">gtmadureira.github.io/build-secure-gpg-key</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
         </tbody></table>
 
 <div style="width:100%;height: 1px;overflow:hidden;margin-top: 10px; padding: 0px; border-top: 1px solid #888888">&nbsp;</div><div style="border: none; margin: 0 5px 0 0; ; font-style: normal; font-weight: bold; font-family: arial black; font-size: 12px;; color:#282923">© 2019 - <output id="data" style="font-family: 'arial black'; font-size: 12px;"></output> Gustavo Madureira, All rights reserved.</div>
