--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <tr><td>GitHub • </td><td><a href="https://github.com/gtmadureira">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Facebook • </td><td><a href="https://facebook.com/gtmadur3ira">gtmadur3ira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Instagram • </td><td><a href="https://www.instagram.com/gtmadureira/">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
-            <tr><td>Twitter • </td><td><a href="https://twitter.com/gtmadureira">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
+            <tr><td>X (Twitter) • </td><td><a href="https://x.com/gtmadureira">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Reddit • </td><td><a href="https://reddit.com/user/gtmadureira">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Mastodon • </td><td><a href="https://mastodon.social/@gtmadureira">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Hacker News • </td><td><a href="https://news.ycombinator.com/user?id=gtmadureira">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
