--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                     <tr><td></td><td><b><i>Live Long and Prosper</i><font size="6">&nbsp;🖖</font> </b><br><br></td></tr>
 
             <tr><td>Website • </td><td><a href="https://gtmadureira.github.io/">gtmadureira.github.io</a> (you are here!)&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
-            <tr><td>PGP Public Key • </td><td>2128 538A 1CEE 6340&nbsp;&nbsp;<a href="https://keybase.io/gtmadureira/pgp_keys.asc?fingerprint=70d3e988c7fab828a063ae492128538a1cee6340">[ view ]</a>&nbsp;&nbsp;<a href="./public_keys/gpg-default-key.asc">[ get ]</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
-            <tr><td>PGP Public Key - Top Secret Level • </td><td>A534 0114 A8DB 11A7&nbsp;&nbsp;<a href="https://keybase.io/gtmadureira/pgp_keys.asc?fingerprint=e3a5d754e1887bfc9b865172a5340114a8db11a7">[ view ]</a>&nbsp;&nbsp;<a href="./public_keys/gpg-safe-key.asc">[ get ]</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
+            <tr><td>PGP Public Key • </td><td>9ECD C3FC 1B71 887A&nbsp;&nbsp;<a href="./public_keys/gpg-default-key.asc">[ get ]</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>LinkedIn • </td><td><a href="https://www.linkedin.com/in/gtmadureira/">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>GitHub • </td><td><a href="https://github.com/gtmadureira">gtmadureira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
             <tr><td>Facebook • </td><td><a href="https://facebook.com/gtmadur3ira">gtmadur3ira</a>&nbsp;&nbsp;<img src="./images/verified_logo.svg" width="18" height="18"></td></tr>
